--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.userosscache
 *.sln.docstates
 *.pyc
+FlaPyDisaster/web.config
+FlaPyDisaster/web.debug.config
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
