some documentation and another update to requirements.txt, should look cleaner now

--- a/FlaPyDisaster/requirements.txt
+++ b/FlaPyDisaster/requirements.txt
@@ -1,108 +1,16 @@
-alabaster
-argcomplete
-astropy
-Babel
-beautifulsoup4
-bitarray
-blaze
-bokeh
-boto
-cffi
-clyent
-colorama
-comtypes
-configobj
-cryptography
-Cython
-cytoolz
-datashape
-decorator
-docutils
-fastcache
-Flask
-geojson
-greenlet
-h5py
-idna
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-itsdangerous
-jdcal
-jedi
-Jinja2
-jsonschema
-jupyter
-jupyter-client
-jupyter-console
-jupyter-core
-lxml
-MarkupSafe
-matplotlib
-menuinst
-mistune
-multipledispatch
-nbconvert
-nbformat
-networkx
-nltk
-nose
-notebook
-numexpr
-numpy
-odo
-openpyxl
-pandas
-path.py
-patsy
-pep8
-pickleshare
-Pillow
-ply
-psutil
-py
-pyasn1
-pycosat
-pycparser
-pycrypto
-pycurl
-pyflakes
-Pygments
-pyOpenSSL
-pyparsing
-pyreadline
-pytest
-python-dateutil
-pytz
-pywin32
-PyYAML
-pyzmq
-qtconsole
-requests
-rope-py3k
-scikit-image
-scikit-learn
-scipy
-simplegeneric
-six
-snowballstemmer
-sockjs-tornado
-Sphinx
-sphinx-rtd-theme
-spyder
-SQLAlchemy
-statsmodels
-sympy
-tables
-toolz
-tornado
-traitlets
-ujson
-unicodecsv
-Werkzeug
-wheel
-xlrd
-XlsxWriter
-xlwings
-xlwt
+click==6.6
+cycler==0.10.0
+Flask==0.11.1
+geojson==1.3.2
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+matplotlib==1.5.1
+numpy==1.11.1
+pandas==0.18.1
+Pillow==3.3.1
+pyparsing==2.1.4
+python-dateutil==2.5.3
+pytz==2016.6.1
+six==1.10.0
+Werkzeug==0.11.10
