adding an ignore for the /env folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 FlaPyDisaster/web.config
 FlaPyDisaster/web.debug.config
 *.pyproj
+FlaPyDisaster/env
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
