--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ web.debug.config
 *.sln
 ptvs_virtualenv_proxy.py
 
+# IntelliJ
+.idea/
+*.iml
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
