--- a/FlaPyDisaster/requirements.txt
+++ b/FlaPyDisaster/requirements.txt
@@ -1,12 +1,13 @@
 click==6.6
 cycler==0.10.0
 Flask==0.11.1
+GDAL==1.11.4
 geojson==1.3.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 matplotlib==1.5.1
-numpy==1.11.1
+numpy==1.10.4
 pandas==0.18.1
 Pillow==3.3.1
 pyparsing==2.1.4
